change alittle bit

--- a/web/index.html
+++ b/web/index.html
@@ -42,7 +42,7 @@
       <div><p id="output"></p></div>
     </div>
 
-    <script src="functions/crop.js" type="module"></script>
+    <script src="js/crop.js" type="module"></script>
   </body>
   <footer></footer>
 </html>
