--- a/web/index.html
+++ b/web/index.html
@@ -36,8 +36,16 @@
       </div>
       <div><input type="file" name="inputFile" id="fileinput" /></div>
     </div>
-    <div class="result">
+    <div class="crop" id="crop">
       <img src="resource\imgHolder.jpg" alt="image" id="img" />
+    </div>
+    <div class="cropped">
+      <div class="btn_container">
+        <button class="predictbtn" id="predictbtn">Predict</button>
+      </div>
+      <div id="new_img"></div>
+    </div>
+    <div class="result">
       <div><p class="text">Result</p></div>
       <div><p id="output"></p></div>
     </div>
